[gd_scene load_steps=17 format=2]

[ext_resource path="res://encyclopedia/sprites/notebook.png" type="Texture" id=1]
[ext_resource path="res://resources/font/BD_Cartoon_Shout.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/icons/GoBack.png" type="Texture" id=3]
[ext_resource path="res://encyclopedia/entry.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/soundtrack/AudioLoopPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://encyclopedia/manager.gd" type="Script" id=6]
[ext_resource path="res://resources/font/OpenSans-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://resources/font/OpenSans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/soundtrack/menu/nature sketch.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_bottom = 29
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.996078, 0.92549, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 30.0

[sub_resource type="DynamicFont" id=5]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 256, 256 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
entry_scene = ExtResource( 4 )
item_container = NodePath("ScrollContainer/item_container")
content_holder = NodePath("notebook/content_holder")
term_label = NodePath("notebook/term_label")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 52.0
margin_top = 260.0
margin_right = 990.0
margin_bottom = 1040.0
rect_min_size = Vector2( 900, 780 )
scroll_horizontal_enabled = false

[node name="item_container" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 15

[node name="notebook" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -920.0
margin_top = -522.0
margin_right = -26.0
margin_bottom = 522.0
texture = ExtResource( 1 )
expand = true

[node name="term_label" type="Label" parent="notebook"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -276.0
margin_top = 120.0
margin_right = 383.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -1080, 82 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 3
autowrap = true

[node name="content_holder" type="Label" parent="notebook"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -276.0
margin_top = 203.0
margin_right = 383.0
margin_bottom = 966.0
rect_pivot_offset = Vector2( -1080, 82 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 3
autowrap = true

[node name="search" type="LineEdit" parent="."]
margin_left = 119.0
margin_top = 129.0
margin_right = 919.0
margin_bottom = 229.0
rect_min_size = Vector2( 800, 100 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
placeholder_text = "Search..."

[node name="scene_name" type="Label" parent="."]
margin_left = 249.0
margin_top = 39.0
margin_right = 782.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 119, 75 )
custom_fonts/font = SubResource( 5 )
text = "ENCYCLOPEDIA"
align = 1
valign = 1

[node name="back" type="Button" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 125.0
margin_bottom = 125.0
rect_min_size = Vector2( 75, 75 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 8 )

[node name="item_image" type="TextureRect" parent="."]
margin_left = 1312.0
margin_top = 670.0
margin_right = 1689.0
margin_bottom = 953.0
rect_min_size = Vector2( 377, 283 )
expand = true

[node name="AudioLoopPlayer" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 9 )

[connection signal="text_changed" from="search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
